--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary">Login</button>
+        <button type="button" class="btn btn-secondary">Sign in</button>
       </div>
     </div>
   </div>
