增加主页，有两个问题： bootstrap-loader加载的css样式将自己的css覆盖了 去掉bootstrap-loader后bootstrap.js无法使用 使用bootstrap模态框后如果不关闭模态框会在<router-outlet>标签外新加一个<div>此时使用路由跳转页面会导致增加的<div>标签无法删除

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,17 +1,17 @@
 <!-- Button trigger modal -->
 <div class="all login">
-  <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#exampleModal">
+  <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#LoginModal">
     Login!
   </button>
 </div>
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+        <h5 class="modal-title" id="LoginModalLabel">Login</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -34,7 +34,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Login</button>
+        <button type="button" class="btn btn-primary" (click)="doLogin()" >Login</button>
         <button type="button" class="btn btn-secondary">Sign in</button>
       </div>
     </div>
