--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -5,5 +5,9 @@
     height : 100%;
 }
 .bg-faded{
-    background-color: transparent;
+    background-color: transparent!important;
+}
+.nav{
+    float: right;
+    color: #ffffff!important;
 }
