路由配置以及包整理

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -7,13 +7,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" [routerLink]="['/homepage']">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link"[routerLink]="['/login']">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                        <a class="nav-link disabled" [routerLink]="['/homepage']">Disabled</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -23,4 +23,5 @@
             </div>
         </nav>
     </div>
+    <router-outlet name="main"></router-outlet>
 </div>
