--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,7 +34,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="doLogin()" >Login</button>
+        <button type="button" class="btn btn-primary" (click)="login()" >Login</button>
         <button type="button" class="btn btn-secondary">Sign in</button>
       </div>
     </div>
