--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -7,6 +7,15 @@
 .bg-faded{
     background-color: transparent!important;
 }
-.nav{
+.navbar{
     float: right;
+}
+.text-center{
+    text-align: center;
+}
+.row{
+    margin: 0px!important;
+}
+.jumbotron{
+    padding-top: 13rem!important;
 }
