--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-faded">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-faded poptop">
     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
         <div class="desc">
             <h3>Retina Ready</h3>
             <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-            <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <p><a [routerLink]="['/homepage']" class="btn btn-primary">Learn More</a></p>
         </div>
     </div>
     <div class="col-md-3">
@@ -52,7 +52,7 @@
         <div class="desc">
             <h3>Retina Ready</h3>
             <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-            <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <p><a [routerLink]="['/homepage']" class="btn btn-primary">Learn More</a></p>
         </div>
     </div>
     <div class="col-md-3">
@@ -62,7 +62,7 @@
         <div class="desc">
             <h3>Retina Ready</h3>
             <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-            <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <p><a [routerLink]="['/homepage']" class="btn btn-primary">Learn More</a></p>
         </div>
     </div>
 </div>
