logout，remember，以及保留登陆状态处理

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-link" [routerLink]="['/homepage']">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"[routerLink]="['/login']">Login</a>
+                <a class="nav-link pointer" data-toggle="modal" data-target="#LogoutModal">Logout</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" [routerLink]="['/homepage']">Disabled</a>
@@ -66,3 +66,22 @@
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="LogoutModal" tabindex="-1" role="dialog" aria-labelledby="LogoutModalLabel" aria-hidden="true" #LoginModal>
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="LogoutModalLabel">Logout</h5>
+      </div>
+      <div class="modal-body">
+        Are you sure to logout?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="logout()" >Logout</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
