--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,15 +20,15 @@
         <form>
           <div class="form-group">
             <label class="form-control-label" for="username">Username</label>
-            <input type="text" class="form-control" id="username" placeholder="Please input your username">
+            <input type="text" [(ngModel)]="username" class="form-control" name="usrname" id="username" placeholder="Please input your username">
           </div>
           <div class="form-group">
             <label class="form-control-label" for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Please input your password">
+            <input type="password" [(ngModel)]="password" class="form-control" name="usrname" id="password" placeholder="Please input your password">
           </div>
           <div>
             <label class="form-check-label">
-              <input class="form-check-input" type="checkbox"> Remember me
+              <input class="form-check-input" type="checkbox" [(ngModel)]=rememberme name="rememberme" > Remember me
             </label>
           </div>
         </form>
