--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,12 @@
 <!-- Button trigger modal -->
 <div class="all login">
-  <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#LoginModal">
-    Login!
-  </button>
+  <div class="container">
+    <div class="row justify-content-center align-items-center">
+      <button type="button" class="btn btn-primary loginBtn col-lg-auto" data-toggle="modal" data-target="#LoginModal">
+        Login!
+      </button>
+    </div>
+  </div>
 </div>
 
 
