首页响应式布局

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="all login">
   <div class="container">
     <div class="row justify-content-center align-items-center">
-      <button type="button" class="btn btn-primary loginBtn col-lg-auto" data-toggle="modal" data-target="#LoginModal">
+      <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#LoginModal">
         Login!
       </button>
     </div>
