--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -5,7 +5,7 @@ html,body{
   height: 100%;
   width: 100%;
   background-size: 100%;
-  /*background-image: url("../../../resource/image/login/1200x747.jpg");*/
+  background-image: url("../../../resource/image/login/1200x747.jpg");
 }
 .loginBtn{
   position: relative;
@@ -27,18 +27,18 @@ html,body{
 .modal-dialog{
   top: 20%;
 }
-@media screen and ( max-width: 640px ) {
+@media screen and ( max-width: 1200px ) and ( min-width: 750px ){
   .login {
-    background-image: url("../../../resource/image/login/640x1136.jpg");
+    background-image: url("../../../resource/image/login/1200x747.jpg");
   }
 }
-@media screen and ( max-width: 750px ) {
+@media screen and ( max-width: 750px ) and ( min-width: 640px ) {
   .login {
     background-image: url("../../../resource/image/login/750x1334.jpg");
   }
 }
-@media screen and ( max-width: 1200px ) {
+@media screen and ( max-width: 640px ) {
   .login {
-    background-image: url("../../../resource/image/login/1200x747.jpg");
+    background-image: url("../../../resource/image/login/640x1136.jpg");
   }
 }
