--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,5 +1,5 @@
 .bgImage{
-    background-image: url("../../../resource/image/homepagebg.jpg");
+    background-image: url("../../../resource/image/homepage/1200x747.jpg");
     background-size: 100%;
     width: 100%;
     height : 100%;
@@ -22,4 +22,19 @@
 }
 .poptop{
     z-index:1000;
+}
+@media screen and ( max-width: 1200px ) and ( min-width: 750px ){
+    .bgImage {
+        background-image: url("../../../resource/image/homepage/1200x747.jpg");
+    }
+}
+@media screen and ( max-width: 750px ) and ( min-width: 640px ) {
+    .bgImage {
+        background-image: url("../../../resource/image/homepage/750x1334.jpg");
+    }
+}
+@media screen and ( max-width: 640px ) {
+    .bgImage {
+        background-image: url("../../../resource/image/homepage/640x1136.jpg");
+    }
 }
