--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -55,7 +55,7 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="SignInModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel" aria-hidden="true" #LoginModal>
+<div class="modal fade" id="RegisterModal" tabindex="-1" role="dialog" aria-labelledby="RegisterModal" aria-hidden="true" #RegisterModal>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
