--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,12 +2,16 @@
 <div class="all login">
   <div class="container">
     <div class="row justify-content-center align-items-center">
-      <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#LoginModal">
-        Login!
-      </button>
-      <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#SignInModal">
-        Register!
-      </button>
+      <div class="col-12 col-md-9">
+        <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#LoginModal">
+          Login!
+        </button>
+      </div>
+      <div class="col-4 col-md-3">
+        <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#SignInModal">
+          Register!
+        </button>
+      </div>
     </div>
   </div>
 </div>
